[package]
name = "keycode"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = { version = "0.5.0", optional = true }
rdev = { version = "0.5.3", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"

[features]
default = ["full"]
full = ["enigo", "rdev", "serde"]